シフト作成ロジックを進めた